--- a/css/main.css
+++ b/css/main.css
@@ -3,28 +3,28 @@
 	padding: 0;
 	box-sizing: border-box;
 } 
-
-:root{
+:root {
 	--index: calc(1vw + 1vh);
 	--gutter: 30px;
 	--side-small: 26;
-	--size-big: 36;
+	--side-big: 36;
+	--depth: 4000px;
 }
 
 @font-face { 
 	font-family: raleway_c;
-	src: url(./fonts/realway-v22-cyrillic-300.woff2);
+	src: url(../fonts/realway-v22-cyrillic-300.woff2);
 	font-weight: 300;
 }	
 @font-face {
 	font-family: raleway_c;
-	src: url(./fonts/realway-v22-cyrillic-100.woff2);
+	src: url(../fonts/realway-v22-cyrillic-100.woff2);
 	font-weight: 100;
 }	
 
 body{ 
-	background-color: black;
-	color: white;
+	background-color: #000;
+	color: #fff;
 	font-size: calc(var(--index) * 2);
 	line-height: 1.75;
 }
@@ -33,10 +33,19 @@ body{
 	width: 100%;
 	height: 100%;
 	position: fixed;
-	perspective: 1500vh;  
+	perspective: 1500px;  
 }
 
 .gallery{
 	transform-style: preserve-3d;
 	height: 100%;
+}
+
+.frame{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
