--- a/css/main.css
+++ b/css/main.css
@@ -13,12 +13,12 @@
 
 @font-face { 
 	font-family: raleway_c;
-	src: url(../fonts/realway-v22-cyrillic-300.woff2);
+	src: url(./fonts/realway-v22-cyrillic-300.woff2);
 	font-weight: 300;
 }	
 @font-face {
 	font-family: raleway_c;
-	src: url(../fonts/realway-v22-cyrillic-100.woff2);
+	src: url(./fonts/realway-v22-cyrillic-100.woff2);
 	font-weight: 100;
 }	
 
@@ -26,6 +26,7 @@ body{
 	background-color: #000;
 	color: #fff;
 	font-size: calc(var(--index) * 2);
+	font-family: raleway_c, sans-serif;
 	line-height: 1.75;
 }
 
@@ -41,7 +42,7 @@ body{
 	height: 100%;
 }
 
-.frame{
+.frame {
 	width: 100%;
 	height: 100%;
 	position: absolute;
